fixed UX for different window sizes. Fome minor flows but content are all readable

--- a/TravelWebsite/css/travel.css
+++ b/TravelWebsite/css/travel.css
@@ -903,7 +903,23 @@ padding-right: 50px;
       letter-spacing: 1.6px;
   }
 
+  #footerWrapper1,#footerContainer{
+    box-sizing: border-box;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .footerDivs{
 
+    25%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #Instagram{
+
+       /* width: 30%; */
+
+  }
 }
 
 @media only screen and  (max-width: 1000px) {
@@ -1052,6 +1068,71 @@ padding-right: 50px;
 }
 }
 
+@media only screen and  (max-width: 870px){
+
+  .footerDivs{
+    display:block;
+    margin: 20px 50px 40px 50px;
+    width: 80%;
+
+   /*vertical-align by default is set to baseline, need
+    to change it so the divs wont go down or adjust. content will begin on top thus avoiding the
+    looks like the divs went down. try playing with it*/
+    /* padding: 0; */
+  }
+  #logoClemy{
+    font-size: 2.5rem;
+  }
+
+  .socialMediaPicsFooter >img{
+    width: 90px;
+    height: 90px;
+    /* margin-right: 3px;
+    margin-top: 10px; */
+  }
+  .footerDivs hr{ /*https://codepen.io/ibrahimjabbari/pen/ozinB   This is where you can get the styles*/
+      width: 400px;
+      margin-right: auto;
+    }.
+    .footerDivs h3{
+      font-size: 1.5rem;
+    }
+
+  #Instagram{
+    padding-bottom: 50px;
+    padding-right: 0;
+    margin-right: 0;
+    width: 100%
+  }
+  #footerContainer2{
+    margin-top: -50px;
+
+  }
+  .footerDivs2{
+    display:inline-block;
+    margin: -30px 0px 0 -20px;
+    text-align: left;
+    box-sizing: border-box;
+  }
+  #copyright{
+     width: 45%;
+
+     margin-left: -5px;
+     margin-right: 3px;
+     padding-left: 3px;
+  }
+  #socialMediaLinks ul,li{
+    padding: 0;
+  }
+  #socialMediaLinks{
+
+     width: 45%;
+     margin-right: 20px;
+
+  }
+
+
+}
 @media only screen and  (max-width: 530px){
   label{
       margin-top: 14.5px;  /*This is the hamburger*/
@@ -1093,7 +1174,7 @@ padding-right: 50px;
       width: 100%;
       height: 60;
       letter-spacing: 1.5px;
-
+      padding-right: 15px;
 
   }
   #content-cell{
@@ -1116,6 +1197,7 @@ padding-right: 50px;
   #content-cell > ul{
     margin-top: 0;
     margin-left: -20px;
+    padding-right: 15px;
 }
   #bookNowButton{
         padding: 15px 15px;
@@ -1126,32 +1208,103 @@ padding-right: 50px;
   }
 /*News Letter section starts here*/
 
+ #newsletterSectionWrapper{
+   text-align: center;
+ }
+
   #newsletterInput{
     margin-left: auto;
     display: block;
   }
   #emailAddress{
-    width: 100%;
+    width: 86%;
     padding: 10px 10px;
-    margin-right: 15px;
+    margin-right: 1px;
     font-size: .9em;
     margin-left: 0;
   }
 
   #subscribeButton{
+  width: 86%;
   display: inline-block;
   margin-top: 5px;
   margin-bottom: 0;
-  padding: 10px 34%;
+  padding: 10px 10px;
   letter-spacing: 3px;
   font-weight: 500;
   font-size: .9em;
+
 }
 .newsletterSectionWrapper >h1{
     font-size: 2em;
 }
+/*Footer Section Starts here*/
+
+#footerWrapper1{
+  margin-left: -20px;
+}
+.footerDivs{
+  display:inline-block;
+  margin: 20px 50px 40px 50px;
+  width: 80%;
+
+ /*vertical-align by default is set to baseline, need
+  to change it so the divs wont go down or adjust. content will begin on top thus avoiding the
+  looks like the divs went down. try playing with it*/
+  /* padding: 0; */
+}
+
+.footerDivs hr{ /*https://codepen.io/ibrahimjabbari/pen/ozinB   This is where you can get the styles*/
+    width: 400px;
+    margin-right: auto;
+  }
+
+#Instagram{
+  padding-bottom: 50px;
+  padding-right: 0;
+  margin-right: 0;
+  width: 100%
+}
+
+
+#footerContainer2{
+  margin-top: -40px;
 
 }
+
+#footerWrapper2{
+padding-top: -50px;
+margin-right: -20px;
+margin-top: -40px;
+text-align: center;
+width: 100%;
+}
+
+.footerDivs2{
+  display:inline-block;
+  margin: -30px 0px 0 -20px;
+  text-align: left;
+  box-sizing: border-box;
+}
+#copyright{
+   width: 45%;
+
+   margin-left: -5px;
+   margin-right: 3px;
+   padding-left: 3px;
+}
+#socialMediaLinks ul,li{
+  padding: 0;
+}
+#socialMediaLinks{
+
+   width: 45%;
+   margin-right: 20px;
+
+}
+}
+
+
 @media only screen and  (max-width: 1000px){
 .topBG >h1{
   font-size: 1em;
